--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 		"nervjs": "^1.5.6",
 		"redux": "^4.0.0",
 		"redux-logger": "^3.0.6",
-		"redux-thunk": "^2.3.0"
+		"redux-thunk": "^2.3.0",
+		"@antv/f2": "^3.4.4"
 	},
 	"devDependencies": {
 		"@tarojs/plugin-babel": "1.3.27",
