--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
 		"stylelint": "^12.0.0",
 		"stylelint-config-taro-rn": "1.3.27",
 		"stylelint-taro-rn": "1.3.27",
-		"taro-f2": "^2.2.0"
+		"taro-f2": "^2.2.0",
+		"taro-ui": "^2.2.4",
+		"classnames": "^2.2.6"
 	}
 }
